--- a/scripts/mars.ini
+++ b/scripts/mars.ini
@@ -6,3 +6,7 @@ post_interval = 300
 [sensor_room_25_print]
 server_room_id = 1
 motion_sensor = mars_motion_1;mars_motion_2;mars_motion_3;mars_motion_4
+
+[sensor_room_25_4]
+server_room_id = 3
+motion_sensor = mars_hub_motion_1
