--- a/scripts/mars.ini
+++ b/scripts/mars.ini
@@ -3,6 +3,11 @@ post_url_room_status = http://139.224.70.36:8443/rooms/
 post_retry_times = 5
 post_interval = 300
 
+[logger]
+log_file = /mars/logs/mars_room_sensor.log
+file_size = 10000000
+backup_count = 20
+
 [sensor_room_25_print]
 server_room_id = 1
 motion_sensor = mars_motion_1;mars_motion_2;mars_motion_3;mars_motion_4
