--- a/scripts/mars.ini
+++ b/scripts/mars.ini
@@ -8,10 +8,10 @@ log_file = /mars/logs/mars_room_sensor.log
 file_size = 10000000
 backup_count = 20
 
-[sensor_room_25_3]
+[Room_TKH_OT2_25_3]
 server_room_id = 1
 motion_sensor = mars_motion_1;mars_motion_2;mars_motion_3;mars_motion_4
 
-[sensor_room_25_7]
+[Room_TKH_OT2_25_7]
 server_room_id = 3
 motion_sensor = mars_hue_motion_1
