Update mars configuration

--- a/scripts/mars.ini
+++ b/scripts/mars.ini
@@ -14,4 +14,4 @@ motion_sensor = mars_motion_1;mars_motion_5;mars_motion_3;mars_motion_4
 
 [Room_TKH_OT2_25_7]
 server_room_id = 3
-motion_sensor = mars_hue_motion_1;mars_hue_motion_2;mars_hue_motion_3;mars_hue_motion_4
+motion_sensor = mars_hue_motion_1;mars_hue_motion_2;mars_hue_motion_3
