update to use raspi id

--- a/scripts/mars.ini
+++ b/scripts/mars.ini
@@ -9,6 +9,11 @@ log_file = /mars/logs/mars_room_sensor.log
 file_size = 10000000
 backup_count = 20
 
+[raspi]
+Room_TKH_OT2_25_3;Room_TKH_OT2_25_7=Room_TKH_OT2_25_3;Room_TKH_OT2_25_7
+raspi_3=
+
+
 [Room_TKH_OT2_25_3]
 server_room_id = 1
 motion_sensor = mars_motion_1;mars_motion_5;mars_motion_3;mars_motion_4
@@ -16,3 +21,7 @@ motion_sensor = mars_motion_1;mars_motion_5;mars_motion_3;mars_motion_4
 [Room_TKH_OT2_25_7]
 server_room_id = 3
 motion_sensor = mars_hue_motion_1;mars_hue_motion_2;mars_hue_motion_3
+
+[Room_TKH_OT2_25_4]
+server_room_id = 4
+motion_sensor = motion_sensor
